CTransifex changelog

+ added a language view
# now stats are being calculated as in transifex